# enterprise-ai-agent-platform

./: .gitignore  README.md
backend/: agent.py  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx
mcp-server/: pyproject.toml  requirements.txt
mcp-server/src/: db_utils.py  pdf_utils.py  server.py
